# api-security-dojo

./: INSTALL.md  PROJECT_SPEC.md  README.md  docker-compose.yaml  docker-compose.yml  pyproject.toml
frontend/src/contexts/: BackendContext.tsx
frontend/src/pages/: ChallengeDetail.tsx  GraphQLConsole.tsx
frontend/src/services/: api.ts
implementations/go-gin/: README.md  go.mod  go.sum  main.go
implementations/go-gin/database/: database.go
implementations/go-gin/graphql/: graphql.go
implementations/go-gin/handlers/: auth.go  (+6 more)
implementations/java-spring/: README.md
implementations/node-express/: README.md  package.json
implementations/php-laravel/: README.md  index.php
implementations/python-fastapi/: .gitignore  requirements.txt
implementations/rust-actix/: Cargo.toml  Dockerfile
implementations/rust-actix/src/: main.rs
implementations/rust-actix/src/api/: auth.rs  docs.rs  legacy.rs  mod.rs  orders.rs  products.rs  tools.rs  users.rs
implementations/rust-actix/src/db/: init.rs  mod.rs  models.rs
implementations/rust-actix/src/graphql/: mod.rs  schema.rs
specs/: challenges.json  openapi.json
specs/bruno/: README.md  bruno.json  collection.bru
specs/data/: seed.sql
specs/test-suite/: conftest.py  test_v01_bola.py  test_v02_broken_auth.py  test_v03_excessive_data.py  test_v05_mass_assignment.py  test_v06_sqli.py  test_v07_command_injection.py  test_v08_misconfig.py  test_v09_improper_assets.py
specs/yaak/: README.md  api-security-dojo.yaak.json
tests/: README.md
tests/cross-implementation/: conftest.py  test_rest_vulnerabilities.py
(+103 files in other folders)
